<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Нск.Транспорт</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button1">АВТОБУСЫ</string>
    <string name="button2">ТРОЛЛЕЙБУСЫ</string>
    <string name="button3">МАРШРУТКИ</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="search_menu_title">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tab_text_10_auto">22</string>
    <string name="tab_text_10_troll">16</string>
    <string name="tab_text_11_auto">23</string>
    <string name="tab_text_12_auto">23к</string>
    <string name="tab_text_13_auto">24</string>
    <string name="tab_text_14_auto">25</string>
    <string name="tab_text_15_auto">41</string>
    <string name="tab_text_16_auto">42</string>
    <string name="tab_text_1_auto">1</string>
    <string name="tab_text_1_gazel">119</string>
    <string name="tab_text_1_troll">1</string>
    <string name="tab_text_2_auto">3</string>
    <string name="tab_text_2_gazel">127</string>
    <string name="tab_text_2_troll">2</string>
    <string name="tab_text_3_auto">4</string>
    <string name="tab_text_3_gazel">128</string>
    <string name="tab_text_3_troll">3</string>
    <string name="tab_text_4_auto">5</string>
    <string name="tab_text_4_gazel">429</string>
    <string name="tab_text_4_troll">4</string>
    <string name="tab_text_5_auto">10</string>
    <string name="tab_text_5_gazel">492</string>
    <string name="tab_text_5_troll">5</string>
    <string name="tab_text_6_auto">10к</string>
    <string name="tab_text_6_troll">6</string>
    <string name="tab_text_7_auto">11</string>
    <string name="tab_text_7_troll">7</string>
    <string name="tab_text_8_auto">13</string>
    <string name="tab_text_8_troll">11</string>
    <string name="tab_text_9_auto">15</string>
    <string name="tab_text_9_troll">12</string>
</resources>
